# Checkers_vibe

./: .gitignore  CMakeLists.txt  HUNTER-SECURITY-REPORT.md  README.md  RUN.md  __bugs_found_hunter_002.md  __test_gaps_hunter_003.md  config.js  convert-tests.mjs  convert-to-jest-v2.mjs  convert-to-jest-v3.mjs  convert-to-jest.mjs  hunter-alpha-dataleak-report.md  hunter-alpha-dynamic-report-v2.md  hunter-alpha-dynamic-report.md  hunter-alpha-frontend-report.md  hunter-bug-report.md  hunter-bugfinder-report.md  hunter-dataleak-report-v2.md  hunter-dataleak-report-v3.md  hunter-dataleak-report.md  hunter-dataleak-v4-report.md  hunter-dbf-report.md  hunter-dlc-report.md  hunter-dynamic-bugfinder-report-v2.md  hunter-dynamic-bugfinder-report.md  hunter-dynamic-bugfinder-v3-report.md  hunter-dynamic-bugfinder-v4-report.md  hunter-frontend-report.md  hunter-frontend-v2-report.md  hunter-leak-report.md  hunter-report-dbf-latest.md  hunter-report-dbf.md  hunter-report-dlc.md  hunter-report-ifx-latest.md  hunter-report-tw.md  hunter-tw-report.md  jest.config.mjs  package-lock.json  package.json  (+1 more)
__tests__/: a11yRegression.test.js  aiFallbackLogic.test.js  aiMoveFlow.test.js  aiMovePrediction.test.js  apiEndpointValidation.test.js  autoSave-rapid-dirty.test.js  autoSaveDirtySnapshot.test.js  autoSaveExtended.test.js  autoSaveLogic.test.js  autoSaveRaceCondition.test.js  autoSaveTiming.test.js  boardAreEqual.test.js  boardConvert.test.js  boardConvertAdditional.test.js  boardConvertEdge.test.js  boardConvertInvalid.test.js  boardConvertOversized.test.js  boardLogicExtended.test.js  boardRoundTrip.test.js  boardSetLookup.test.js  boardToCppValidation.test.js  buffer.test.js  clientComponentLogic.test.js  colorTurnConversion.test.js  configAiBoard.test.js  (+121 more)
engine/: .gitignore  CMakeLists.txt
engine/src/: board.cpp  board.h  engine.cpp  engine.h  main.cpp  minimax.cpp  minimax.h  movegen.cpp  movegen.h  server.cpp
engine/tests/: test_moves.cpp
(+123 files in other folders)
